[package]
name = "gist-cli"
version = "0.1.0"
authors = ["khuynh <hkennyv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.19"
rpassword = "3.0.2"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0"
